src/test/ui/parser/issue-17904-2.stderr
error: expected item, found keyword `where`
  --> $DIR/issue-17904-2.rs:3:24
   |
LL | struct Bar<T> { x: T } where T: Copy
   |                        ^^^^^ expected item

error: aborting due to previous error

